infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: movie-server
