infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /movie-db-api-rs(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: movie-server-rs
            port:
              name: http
      - path: /movie-db-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: movie-server
            port:
              name: http
